remove access key

--- a/AoHoa.ipynb
+++ b/AoHoa.ipynb
@@ -16,8 +16,8 @@
     "# Khởi tạo client DynamoDB\n",
     "dynamodb = boto3.resource(\n",
     "    'dynamodb',\n",
-    "    aws_access_key_id=\"AKIAZOZQFSDKQL6REN5A\",\n",
-    "    aws_secret_access_key=\"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\",\n",
+    "    aws_access_key_id=\"aws_access_key_id\",\n",
+    "    aws_secret_access_key=\"aws_secret_access_key\",\n",
     "    region_name=\"us-west-2\"\n",
     ")\n",
     "\n",
